Added display fuctionality

--- a/Src/KlickSafeExtension/Display/AboutUs/aboutUs.html
+++ b/Src/KlickSafeExtension/Display/AboutUs/aboutUs.html
@@ -8,7 +8,7 @@
 <body>
 <div class="NavCont">
         <div class="NavLogo">
-            <img src="../Assets/safetyBadge.png"
+            <img src="../../Assets/safetyBadge.png"
                  alt="A photo from the Assets folder">
             <h1>KlickSafe</h1>
         </div>
@@ -17,7 +17,7 @@
 
         <div class="NavText">
             <a href="../Home/index.html">Home</a>
-            <a href="../AboutUs/aboutUs.html">About Us</a>
+            <a href="/aboutUs.html">About Us</a>
             <a>Features</a>
         </div>
 
@@ -42,7 +42,7 @@
         Join us on our journey to secure the digital world and stay safe online with KlickSafe.</p>
 </div>
     <div class="AboutPattern">
-        <img src="../Assets/Lingkaran.svg">
+        <img src="../../Assets/Lingkaran.svg">
     </div>
 </div>
 
