--- a/Src/KlickSafeExtension/Display/Home/index.html
+++ b/Src/KlickSafeExtension/Display/Home/index.html
@@ -8,7 +8,7 @@
 <body>
  <div class="NavCont">
      <div class="NavLogo">
-         <img src="../Assets/safetyBadge.png"
+<!--         <img src="../Assets/safetyBadge.png"-->
               alt="A photo from the Assets folder">
              <h1>KlickSafe</h1>
      </div>
@@ -38,12 +38,12 @@
             </div>
 
             <div class="HeroImage">
-                <img src="../Assets/pana.svg">
+                <img src="../../Assets/pana.svg">
             </div>
 </div>
  <div class="HeroSections">
      <div class="HeroImage">
-         <img src="../Assets/Illustration.svg">
+         <img src="../../Assets/Illustration.svg">
      </div>
      <div class="HeroText">
          <h1>"Detect and block harmful<span style="display: block"><span>
